backend/infra/k8s/analyticsdepl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - name: analytics
          image: shyambadireddy/analytics-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-srv
spec:
  selector:
    app: analytics
  ports:
    - port: 5006
      targetPort: 5006
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-postgres
  template:
    metadata:
      labels:
        app: analytics-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-postgres-srv
spec:
  selector:
    app: analytics-postgres
  ports:
    - port: 5432
      targetPort: 5432
