backend/infra/k8s/contentdepl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content
  template:
    metadata:
      labels:
        app: content
    spec:
      containers:
        - name: content
          image: shyambadireddy/content-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: content-srv
spec:
  selector:
    app: content
  ports:
    - port: 5002
      targetPort: 5002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-postgres
  template:
    metadata:
      labels:
        app: content-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: content-postgres-srv
spec:
  selector:
    app: content-postgres
  ports:
    - port: 5432
      targetPort: 5432
