backend/infra/k8s/interviewdepl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interview
  template:
    metadata:
      labels:
        app: interview
    spec:
      containers:
        - name: interview
          image: shyambadireddy/interview-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: interview-srv
spec:
  selector:
    app: interview
  ports:
    - port: 5005
      targetPort: 5005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interview-postgres
  template:
    metadata:
      labels:
        app: interview-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: interview-postgres-srv
spec:
  selector:
    app: interview-postgres
  ports:
    - port: 5432
      targetPort: 5432
