backend/infra/k8s/mockdepl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock
  template:
    metadata:
      labels:
        app: mock
    spec:
      containers:
        - name: mock
          image: shyambadireddy/mock-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: mock-srv
spec:
  selector:
    app: mock
  ports:
    - port: 5004
      targetPort: 5004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-postgres
  template:
    metadata:
      labels:
        app: mock-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: mock-postgres-srv
spec:
  selector:
    app: mock-postgres
  ports:
    - port: 5432
      targetPort: 5432
