backend/infra/k8s/progressdepl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progress-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: progress
  template:
    metadata:
      labels:
        app: progress
    spec:
      containers:
        - name: progress
          image: shyambadireddy/progress-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: progress-srv
spec:
  selector:
    app: progress
  ports:
    - port: 5003
      targetPort: 5003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progress-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: progress-postgres
  template:
    metadata:
      labels:
        app: progress-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: progress-postgres-srv
spec:
  selector:
    app: progress-postgres
  ports:
    - port: 5432
      targetPort: 5432
