backend/infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prepskill-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: prepskill.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 5001
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 5001
          - path: /api/content
            pathType: Prefix
            backend:
              service:
                name: content-srv
                port:
                  number: 5002
          - path: /api/progress
            pathType: Prefix
            backend:
              service:
                name: progress-srv
                port:
                  number: 5003
          - path: /api/mock
            pathType: Prefix
            backend:
              service:
                name: mock-srv
                port:
                  number: 5004
          - path: /api/interviews
            pathType: Prefix
            backend:
              service:
                name: interview-srv
                port:
                  number: 5005
          - path: /api/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-srv
                port:
                  number: 5006
